inou/prp/tests/errors/concat_fail_inline_after_field.prp
/*
:name: concat_fail_inline_after_field
:type: error
:error: duplicate|already exists|already declared|overlap|exists
*/

// A field introduced explicitly in a tuple literal cannot be introduced again
// by a later inline concat expansion.
// Doc: ../docs/docs/pyrope/03-bundle.md `...` triggers a compile error if the same entry already exists.

const a = (const x=1, const y=2)
const bad = (const x=0, ...a) // locate_error_here
